Updated information of esp01

--- a/docs/docs/esp-01/dh11.md
+++ b/docs/docs/esp-01/dh11.md
@@ -3,6 +3,7 @@
 ## How it works
 
 ## How to connect to ESP-01
+![DH11 sensor inputs](../img/dht11-inputs.png)
 
 ## How to program it
 The following code can be found at `dh11.cpp`.
