--- a/docs/docs/plantuml.org
+++ b/docs/docs/plantuml.org
@@ -40,3 +40,20 @@ esp -> mqtt : publishes the information
 
 #+RESULTS:
 [[file:img/dataproducer1.png]]
+
+#+begin_src plantuml :file img/chibios-arduino.png :dir .
+!theme cyborg
+
+#+end_src
+
+#+begin_src plantuml :file img/arduino-esp.png :dir .
+!theme cyborg
+MQTTBroker -> Subscriber : Recives information on the chanels that is subscribet to
+Subscriber -> Subscriber : Actualizes State
+Arduino -> Subscriber : Requests Data
+Subscriber -> Arduino : Sends Data
+
+#+end_src
+
+#+RESULTS:
+[[file:img/arduino-esp.png]]
